--- a/app/views/toys/_toy.html.haml
+++ b/app/views/toys/_toy.html.haml
@@ -1,3 +1,7 @@
-%div{ id: (dom_id toy)}
-  = toy.name
-  = toy.description
+%div{ id: (dom_id toy) }
+  helllo
+  %h1
+    = toy.name
+  %p
+    = toy.description
+  = image_tag toy.image.url :thumb
