--- a/app/views/toys/new.html.haml
+++ b/app/views/toys/new.html.haml
@@ -4,5 +4,6 @@
   = f.text_field :name
   = f.text_area  :description
   = f.text_field :price
+  = f.file_field :image
   = f.submit 'OK'
   = link_to 'Cancel', :back
