--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -32,12 +32,29 @@ a {
   }
 }
 
+table {
+  border-collapse: collapse;
+}
+
+thead tr {
+  background-color: grey;
+  color: white;
+}
+
+tr:nth-child(even) {
+  background-color: lightgrey;
+}
+
 th {
   padding-bottom: 5px;
+  text-align: left;
+  padding: 5px 7px;
+  vertical-align: middle;
 }
 
 td {
-  padding: 0 5px 7px;
+  padding: 5px 5px;
+  vertical-align: middle;
 }
 
 div {
