--- a/app/views/toys/_toy.html.haml
+++ b/app/views/toys/_toy.html.haml
@@ -6,4 +6,9 @@
   %p
     = toy.description
   %p
-    = link_to 'Message Seller', 
+    Seller:
+    = toy.seller.first_name
+    = toy.seller.last_name
+  - if toy.seller_id != current_user.id
+    %p
+      = link_to 'Message Seller', (new_message_path recipient_id: toy.seller_id)
