--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,17 +1,20 @@
 <nav>
+  <% if current_user %>
+    <div style="display:inline-block">
+      <%= link_to "Messages", messages_path %>
+    </div>
+    <div style="float:right">
+      Current User:
+      <%= current_user.first_name %>
+      <%= current_user.last_name %>
+    </div>
+  <% end %>
+
   <% unless current_page? new_session_path %>
     <% if current_user %>
       <%= link_to "Log Out", session_path, method: :delete  %>
     <% else %>
       <%= link_to "Log In", new_session_path %>
     <% end %>
-  <% end %>
-
-  <% if current_user %>
-    <div style='float:right'>
-      Current User:
-      <%= current_user.first_name %>
-      <%= current_user.last_name %>
-    </div>
   <% end %>
 </nav>
