--- a/app/views/toys/new.html.haml
+++ b/app/views/toys/new.html.haml
@@ -1,9 +1,18 @@
 %h1
   Sell a Toy
 = form_for @toy do |f|
-  = f.text_field :name
-  = f.text_area  :description
-  = f.text_field :price
-  = f.file_field :image
-  = f.submit 'OK'
-  = link_to 'Cancel', :back
+  %fieldset
+    = f.label :name
+    = f.text_field :name
+  %fieldset
+    = f.label :description
+    = f.text_area  :description
+  %fieldset
+    = f.label :price
+    = f.text_field :price
+  %fieldset
+    = f.label :name
+    = f.file_field :image
+  %fieldset.actions
+    = f.submit 'OK'
+    = link_to 'Cancel', :back
