Add recipient to messages#new form

--- a/app/views/messages/show.html.haml
+++ b/app/views/messages/show.html.haml
@@ -1,11 +1,13 @@
 %p#notice= notice
 
 %p
-  %b Sender:
-  = @message.sender
+  %b From
+  = @message.sender.first_name
+  = @message.sender.last_name
 %p
   %b Recipient:
-  = @message.recipient
+  = @message.recipient.first_name
+  = @message.recipient.last_name
 %p
   %b Text:
   = @message.text
