--- a/app/views/messages/_form.html.haml
+++ b/app/views/messages/_form.html.haml
@@ -1,4 +1,5 @@
 = form_for @message do |f|
+  = f.hidden_field :recipient_id
   - if @message.errors.any?
     #error_explanation
       %h2= "#{pluralize(@message.errors.count, "error")} prohibited this message from being saved:"
@@ -6,14 +7,13 @@
         - @message.errors.full_messages.each do |message|
           %li= message
 
-  .field
-    = f.label :sender
-    = f.text_field :sender_id
-  .field
-    = f.label :recipient
-    = f.text_field :recipient_id
+  %h2
+    To
+    = @message.recipient.first_name
+    = @message.recipient.last_name
   .field
     = f.label :text
     = f.text_area :text
   .actions
     = f.submit 'Save'
+    = link_to 'Back', messages_path
