--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,15 +1,9 @@
 <nav>
-  <% unless current_page? new_session_path %>
+  <% unless controller_name == "sessions" %>
     <% if current_user %>
       <%= link_to "Log Out", session_path, method: :delete  %>
     <% else %>
       <%= link_to "Log In", new_session_path %>
-    <% end %>
-    <% unless current_page? controller: 'messages' %>
-      <%= link_to 'Messages', messages_path %>
-    <% end %>
-    <% unless current_page? controller: 'toys' %>
-      <%= link_to 'Toys', toys_path %>
     <% end %>
   <% end %>
 
@@ -19,5 +13,11 @@
       <%= current_user.first_name %>
       <%= current_user.last_name %>
     </div>
+    <% unless current_page? controller: 'messages' %>
+      <%= link_to 'Messages', messages_path %>
+    <% end %>
+    <% unless current_page? controller: 'toys' %>
+      <%= link_to 'Toys', toys_path %>
+    <% end %>
   <% end %>
 </nav>
